; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/broadcom/extr_phy-bcm-ns-usb3.c_bcm_ns_usb3_mdiodev_phy_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/broadcom/extr_phy-bcm-ns-usb3.c_bcm_ns_usb3_mdiodev_phy_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm_ns_usb3 = type { %struct.mdio_device* }
%struct.mdio_device = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcm_ns_usb3*, i32, i32)* @bcm_ns_usb3_mdiodev_phy_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm_ns_usb3_mdiodev_phy_write(%struct.bcm_ns_usb3* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bcm_ns_usb3*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.mdio_device*, align 8
  store %struct.bcm_ns_usb3* %0, %struct.bcm_ns_usb3** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.bcm_ns_usb3*, %struct.bcm_ns_usb3** %4, align 8
  %9 = getelementptr inbounds %struct.bcm_ns_usb3, %struct.bcm_ns_usb3* %8, i32 0, i32 0
  %10 = load %struct.mdio_device*, %struct.mdio_device** %9, align 8
  store %struct.mdio_device* %10, %struct.mdio_device** %7, align 8
  %11 = load %struct.mdio_device*, %struct.mdio_device** %7, align 8
  %12 = getelementptr inbounds %struct.mdio_device, %struct.mdio_device* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.mdio_device*, %struct.mdio_device** %7, align 8
  %15 = getelementptr inbounds %struct.mdio_device, %struct.mdio_device* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @mdiobus_write(i32 %13, i32 %16, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @mdiobus_write(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
